--- a/index.html
+++ b/index.html
@@ -1,194 +1,142 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ANKEB7T</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ANKEB7T</title>
+    <style>
+        body {
+            background-color: #000;
+            color: #ff0000;
+            font-family: 'Courier New', Courier, monospace;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            flex-direction: column;
+            overflow: hidden;
+        }
 
-<style>
-body{
-margin:0;
-background:black;
-font-family:Courier New, monospace;
-overflow:hidden;
-color:red;
-}
+        /* SAĞ ÜST TARİH (Gecikmesiz) */
+        #datetime {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            text-align: right;
+            font-size: 14px;
+            letter-spacing: 2px;
+            z-index: 1000;
+        }
 
-/* SHINE TEXT */
-.shineText{
-position:fixed;
-width:100%;
-text-align:center;
-font-weight:900;
-letter-spacing:30px;
-background:linear-gradient(
-90deg,
-#550000 0%,
-#ff0000 40%,
-white 50%,
-#ff0000 60%,
-#550000 100%
-);
-background-size:200% auto;
--webkit-background-clip:text;
--webkit-text-fill-color:transparent;
-animation:shine 4s linear infinite;
-}
+        /* SHINE (PARLAMA) EFEKTİ SADECE BU İKİSİNDE */
+        .shine-text {
+            background: linear-gradient(to right, #4d0000 20%, #ff0000 40%, #ffffff 50%, #ff0000 60%, #4d0000 80%);
+            background-size: 200% auto;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            animation: shine 3s linear infinite;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
 
-@keyframes shine{
-0%{background-position:-200% center;}
-100%{background-position:200% center;}
-}
+        @keyframes shine {
+            to { background-position: 200% center; }
+        }
 
-#top{
-top:70px;
-font-size:120px;
-}
+        .main-title { font-size: 50px; letter-spacing: 10px; margin-bottom: 20px; position: relative; z-index: 100; }
+        .zirve-title { font-size: 60px; letter-spacing: 20px; opacity: 0.8; margin-top: 40px; position: relative; z-index: 100; }
 
-#bottom{
-bottom:40px;
-font-size:90px;
-}
+        /* GİRİŞ BUTONU (OPEN) */
+        #open-btn {
+            background: transparent;
+            color: #ff0000;
+            border: 1px solid #ff0000;
+            padding: 10px 40px;
+            cursor: pointer;
+            font-family: 'Courier New', sans-serif;
+            letter-spacing: 5px;
+            margin: 20px 0;
+            transition: 0.5s;
+        }
+        #open-btn:hover { background: #ff0000; color: #000; box-shadow: 0 0 20px #ff0000; }
 
-/* Tarih */
-#datetime{
-position:fixed;
-top:20px;
-right:30px;
-font-size:14px;
-letter-spacing:3px;
-}
+        /* GİZLİ PANEL (AÇILINCA GELECEK) */
+        #main-content {
+            display: none; /* Başta gizli */
+            flex-direction: column;
+            align-items: center;
+            border: 1px solid #ff0000;
+            padding: 40px;
+            width: 350px;
+            animation: fadeIn 1.5s ease;
+        }
 
-/* OPEN */
-#openScreen{
-height:100vh;
-display:flex;
-justify-content:center;
-align-items:center;
-}
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
-button{
-border:1px solid red;
-background:none;
-color:red;
-padding:15px 50px;
-font-size:20px;
-letter-spacing:6px;
-cursor:pointer;
-}
-
-button:hover{
-background:red;
-color:black;
-}
-
-/* Boot */
-#boot{
-display:none;
-position:absolute;
-top:50%;
-left:50%;
-transform:translate(-50%,-50%);
-text-align:left;
-}
-
-/* Panel */
-#panel{
-display:none;
-height:100vh;
-align-items:center;
-justify-content:center;
-}
-
-.box{
-border:1px solid red;
-padding:60px;
-width:350px;
-text-align:center;
-}
-
-.link{
-border:1px solid red;
-padding:15px;
-margin:20px 0;
-cursor:pointer;
-letter-spacing:5px;
-}
-
-.link:hover{
-background:red;
-color:black;
-}
-</style>
+        .links { display: flex; flex-direction: column; gap: 10px; width: 100%; margin: 20px 0; }
+        .btn {
+            border: 1px solid #4d0000;
+            color: #ff0000;
+            padding: 10px;
+            text-decoration: none;
+            text-align: center;
+            font-size: 13px;
+            letter-spacing: 2px;
+            transition: 0.3s;
+        }
+        .btn:hover { border-color: #ff0000; background: rgba(255,0,0,0.1); }
+        
+        .footer-tag { font-size: 10px; letter-spacing: 5px; opacity: 0.7; }
+    </style>
 </head>
-
 <body>
 
-<div class="shineText" id="top">ANKEB7T</div>
-<div class="shineText" id="bottom">ZIRVE</div>
+    <div id="datetime">
+        <div id="date"></div>
+        <div id="time"></div>
+    </div>
 
-<div id="datetime"></div>
+    <div class="main-title shine-text">ANKEB7T</div>
 
-<!-- OPEN -->
-<div id="openScreen">
-<button onclick="startBoot()">[ OPEN ]</button>
-</div>
+    <button id="open-btn" onclick="openSite()">[ OPEN ]</button>
 
-<!-- BOOT -->
-<div id="boot">
-<p>> Initializing boot sequence...</p>
-<p>> Bypassing local encryption...</p>
-<p>> Connection established...</p>
-<p>> Accessing identity core...</p>
-</div>
+    <div id="main-content">
+        <div class="links">
+            <a href="https://t.me/allesfurdie" class="btn" target="_blank">TELEGRAM</a>
+            <a href="https://instagram.com/ankeb7t27" class="btn" target="_blank">INSTAGRAM</a>
+            <a href="https://wa.me/998998780248" class="btn" target="_blank">WHATSAPP</a>
+        </div>
+        <div class="footer-tag">ALLES FUR DIE</div>
+    </div>
 
-<!-- PANEL -->
-<div id="panel">
-<div class="box">
+    <div class="zirve-title shine-text">ZİRVE</div>
 
-<h2 style="letter-spacing:10px;">ANKEB7T</h2>
+    <script>
+        // Giriş Fonksiyonu
+        function openSite() {
+            document.getElementById('open-btn').style.display = 'none';
+            document.getElementById('main-content').style.display = 'flex';
+        }
 
-<div class="link" onclick="window.open('https://t.me/allesfurdie')">
-TELEGRAM
-</div>
+        // Tarih ve Saat Fonksiyonu (Gecikmesiz)
+        function updateClock() {
+            const now = new Date();
+            const d = String(now.getDate()).padStart(2, '0');
+            const m = String(now.getMonth() + 1).padStart(2, '0');
+            const y = now.getFullYear();
+            const h = String(now.getHours()).padStart(2, '0');
+            const min = String(now.getMinutes()).padStart(2, '0');
+            const sec = String(now.getSeconds()).padStart(2, '0');
 
-<div class="link" onclick="window.open('https://instagram.com/ankeb7t27')">
-INSTAGRAM
-</div>
+            document.getElementById('date').innerText = d + "." + m + "." + y;
+            document.getElementById('time').innerText = h + ":" + min + ":" + sec;
+        }
 
-<div class="link" onclick="window.open('https://wa.me/998998780248')">
-WHATSAPP
-</div>
-
-<p style="margin-top:40px;letter-spacing:8px;opacity:.6;">
-ALLES FUR DIE
-</p>
-
-</div>
-</div>
-
-<script>
-/* Tarih */
-function updateTime(){
-const now=new Date();
-document.getElementById("datetime").innerHTML=
-now.toLocaleDateString("tr-TR")+"<br>"+
-now.toLocaleTimeString("tr-TR");
-}
-updateTime();
-setInterval(updateTime,1000);
-
-/* OPEN -> BOOT -> PANEL */
-function startBoot(){
-document.getElementById("openScreen").style.display="none";
-document.getElementById("boot").style.display="block";
-
-setTimeout(()=>{
-document.getElementById("boot").style.display="none";
-document.getElementById("panel").style.display="flex";
-},3500);
-}
-</script>
+        // Hemen çalıştır, bekleme yapma
+        updateClock();
+        setInterval(updateClock, 1000);
+    </script>
 
 </body>
 </html>
