--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ANKEB7T</title>
+    <title>ANKEB7T ZİRVE</title>
     <style>
         body {
             background-color: #000;
@@ -16,26 +16,29 @@
             margin: 0;
             flex-direction: column;
             overflow: hidden;
+            background-image: radial-gradient(circle, #1a0000 0%, #000 80%);
         }
 
-        /* SAĞ ÜST TARİH (Gecikmesiz) */
+        /* GECİKMESİZ TARİH */
         #datetime {
             position: fixed;
             top: 20px;
-            right: 20px;
+            right: 30px;
             text-align: right;
-            font-size: 14px;
-            letter-spacing: 2px;
+            font-size: 18px; /* Biraz büyüttüm */
+            letter-spacing: 3px;
             z-index: 1000;
+            font-weight: bold;
+            text-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
         }
 
-        /* SHINE (PARLAMA) EFEKTİ SADECE BU İKİSİNDE */
+        /* SHINE (PARLAMA) EFEKTİ */
         .shine-text {
             background: linear-gradient(to right, #4d0000 20%, #ff0000 40%, #ffffff 50%, #ff0000 60%, #4d0000 80%);
             background-size: 200% auto;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            animation: shine 3s linear infinite;
+            animation: shine 2.5s linear infinite;
             font-weight: bold;
             text-transform: uppercase;
         }
@@ -44,50 +47,58 @@
             to { background-position: 200% center; }
         }
 
-        .main-title { font-size: 50px; letter-spacing: 10px; margin-bottom: 20px; position: relative; z-index: 100; }
-        .zirve-title { font-size: 60px; letter-spacing: 20px; opacity: 0.8; margin-top: 40px; position: relative; z-index: 100; }
+        /* ANA BAŞLIKLAR (SABİT) */
+        .header-title { font-size: 80px; letter-spacing: 15px; margin-bottom: 10px; }
+        .footer-title { font-size: 90px; letter-spacing: 25px; margin-top: 20px; opacity: 0.9; }
 
-        /* GİRİŞ BUTONU (OPEN) */
+        /* OPEN BUTONU */
         #open-btn {
             background: transparent;
             color: #ff0000;
-            border: 1px solid #ff0000;
-            padding: 10px 40px;
+            border: 2px solid #ff0000;
+            padding: 15px 60px;
             cursor: pointer;
+            font-size: 20px;
             font-family: 'Courier New', sans-serif;
-            letter-spacing: 5px;
-            margin: 20px 0;
-            transition: 0.5s;
+            letter-spacing: 8px;
+            margin: 30px 0;
+            transition: 0.4s;
+            box-shadow: 0 0 10px #ff0000;
         }
-        #open-btn:hover { background: #ff0000; color: #000; box-shadow: 0 0 20px #ff0000; }
+        #open-btn:hover { background: #ff0000; color: #000; box-shadow: 0 0 40px #ff0000; transform: scale(1.1); }
 
-        /* GİZLİ PANEL (AÇILINCA GELECEK) */
+        /* MERKEZ PANEL (KUTU) */
         #main-content {
-            display: none; /* Başta gizli */
+            display: none; 
             flex-direction: column;
             align-items: center;
-            border: 1px solid #ff0000;
-            padding: 40px;
-            width: 350px;
-            animation: fadeIn 1.5s ease;
+            border: 2px solid #ff0000;
+            padding: 60px;
+            width: 450px; /* Kutuyu büyüttüm */
+            background: rgba(0, 0, 0, 0.8);
+            box-shadow: 0 0 30px rgba(255, 0, 0, 0.3);
+            animation: expand 0.8s ease-out;
         }
 
-        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+        @keyframes expand { from { transform: scale(0.8); opacity: 0; } to { transform: scale(1); opacity: 1; } }
 
-        .links { display: flex; flex-direction: column; gap: 10px; width: 100%; margin: 20px 0; }
+        .inner-title { font-size: 35px; letter-spacing: 8px; margin-bottom: 30px; }
+
+        .links { display: flex; flex-direction: column; gap: 20px; width: 100%; margin: 25px 0; }
         .btn {
-            border: 1px solid #4d0000;
+            border: 1px solid #660000;
             color: #ff0000;
-            padding: 10px;
+            padding: 15px;
             text-decoration: none;
             text-align: center;
-            font-size: 13px;
-            letter-spacing: 2px;
+            font-size: 16px;
+            letter-spacing: 4px;
             transition: 0.3s;
+            background: rgba(20, 0, 0, 0.5);
         }
-        .btn:hover { border-color: #ff0000; background: rgba(255,0,0,0.1); }
+        .btn:hover { border-color: #ff0000; background: #ff0000; color: #000; box-shadow: 0 0 15px #ff0000; }
         
-        .footer-tag { font-size: 10px; letter-spacing: 5px; opacity: 0.7; }
+        .alles-text { font-size: 14px; letter-spacing: 10px; opacity: 0.8; margin-top: 20px; }
     </style>
 </head>
 <body>
@@ -97,29 +108,30 @@
         <div id="time"></div>
     </div>
 
-    <div class="main-title shine-text">ANKEB7T</div>
+    <div class="header-title shine-text">ANKEB7T</div>
 
     <button id="open-btn" onclick="openSite()">[ OPEN ]</button>
 
     <div id="main-content">
+        <div class="inner-title shine-text">ANKEB7T</div>
+        
         <div class="links">
             <a href="https://t.me/allesfurdie" class="btn" target="_blank">TELEGRAM</a>
-            <a href="https://instagram.com/ankeb7t27" class="btn" target="_blank">INSTAGRAM</a>
+            <a href="https://instagram.com/ankeb7t01" class="btn" target="_blank">INSTAGRAM</a>
             <a href="https://wa.me/998998780248" class="btn" target="_blank">WHATSAPP</a>
         </div>
-        <div class="footer-tag">ALLES FUR DIE</div>
+
+        <div class="alles-text shine-text">ALLES FUR DIE</div>
     </div>
 
-    <div class="zirve-title shine-text">ZİRVE</div>
+    <div class="footer-title shine-text">ZİRVE</div>
 
     <script>
-        // Giriş Fonksiyonu
         function openSite() {
             document.getElementById('open-btn').style.display = 'none';
             document.getElementById('main-content').style.display = 'flex';
         }
 
-        // Tarih ve Saat Fonksiyonu (Gecikmesiz)
         function updateClock() {
             const now = new Date();
             const d = String(now.getDate()).padStart(2, '0');
@@ -133,7 +145,7 @@
             document.getElementById('time').innerText = h + ":" + min + ":" + sec;
         }
 
-        // Hemen çalıştır, bekleme yapma
+        // Sıfır gecikme için hemen çağırıyoruz
         updateClock();
         setInterval(updateClock, 1000);
     </script>
