--- a/index.html
+++ b/index.html
@@ -16,20 +16,18 @@
             margin: 0;
             flex-direction: column;
             overflow: hidden;
-            background-image: radial-gradient(circle, #1a0000 0%, #000 80%);
         }
 
-        /* GECİKMESİZ TARİH */
+        /* GECİKMESİZ TARİH (SAĞ ÜST) */
         #datetime {
             position: fixed;
-            top: 20px;
-            right: 30px;
+            top: 15px;
+            right: 20px;
             text-align: right;
-            font-size: 18px; /* Biraz büyüttüm */
-            letter-spacing: 3px;
+            font-size: 16px;
+            letter-spacing: 2px;
             z-index: 1000;
             font-weight: bold;
-            text-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
         }
 
         /* SHINE (PARLAMA) EFEKTİ */
@@ -48,57 +46,56 @@
         }
 
         /* ANA BAŞLIKLAR (SABİT) */
-        .header-title { font-size: 80px; letter-spacing: 15px; margin-bottom: 10px; }
-        .footer-title { font-size: 90px; letter-spacing: 25px; margin-top: 20px; opacity: 0.9; }
+        .header-title { font-size: 70px; letter-spacing: 12px; margin-bottom: 5px; }
+        .footer-title { font-size: 80px; letter-spacing: 20px; margin-top: 15px; opacity: 0.9; }
 
         /* OPEN BUTONU */
         #open-btn {
             background: transparent;
             color: #ff0000;
-            border: 2px solid #ff0000;
-            padding: 15px 60px;
+            border: 1px solid #ff0000;
+            padding: 12px 40px;
             cursor: pointer;
-            font-size: 20px;
+            font-size: 18px;
             font-family: 'Courier New', sans-serif;
-            letter-spacing: 8px;
-            margin: 30px 0;
+            letter-spacing: 6px;
+            margin: 20px 0;
             transition: 0.4s;
-            box-shadow: 0 0 10px #ff0000;
         }
-        #open-btn:hover { background: #ff0000; color: #000; box-shadow: 0 0 40px #ff0000; transform: scale(1.1); }
+        #open-btn:hover { background: #ff0000; color: #000; box-shadow: 0 0 30px #ff0000; }
 
-        /* MERKEZ PANEL (KUTU) */
+        /* ORTA KUTUCUK (KÜÇÜLTÜLMÜŞ) */
         #main-content {
             display: none; 
             flex-direction: column;
             align-items: center;
-            border: 2px solid #ff0000;
-            padding: 60px;
-            width: 450px; /* Kutuyu büyüttüm */
-            background: rgba(0, 0, 0, 0.8);
-            box-shadow: 0 0 30px rgba(255, 0, 0, 0.3);
-            animation: expand 0.8s ease-out;
+            border: 1px solid #ff0000;
+            padding: 25px; /* İç boşluğu daralttım */
+            width: 300px;  /* Genişliği küçülttüm */
+            background: rgba(0, 0, 0, 0.9);
+            box-shadow: 0 0 20px rgba(255, 0, 0, 0.2);
+            animation: fadeIn 0.5s ease-in;
         }
 
-        @keyframes expand { from { transform: scale(0.8); opacity: 0; } to { transform: scale(1); opacity: 1; } }
+        @keyframes fadeIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
 
-        .inner-title { font-size: 35px; letter-spacing: 8px; margin-bottom: 30px; }
+        .inner-title { font-size: 24px; letter-spacing: 5px; margin-bottom: 20px; }
 
-        .links { display: flex; flex-direction: column; gap: 20px; width: 100%; margin: 25px 0; }
+        /* LİNKLER */
+        .links { display: flex; flex-direction: column; gap: 12px; width: 100%; margin: 15px 0; }
         .btn {
-            border: 1px solid #660000;
+            border: 1px solid #440000;
             color: #ff0000;
-            padding: 15px;
+            padding: 10px;
             text-decoration: none;
             text-align: center;
-            font-size: 16px;
-            letter-spacing: 4px;
+            font-size: 14px;
+            letter-spacing: 2px;
             transition: 0.3s;
-            background: rgba(20, 0, 0, 0.5);
         }
-        .btn:hover { border-color: #ff0000; background: #ff0000; color: #000; box-shadow: 0 0 15px #ff0000; }
+        .btn:hover { border-color: #ff0000; background: rgba(255,0,0,0.15); }
         
-        .alles-text { font-size: 14px; letter-spacing: 10px; opacity: 0.8; margin-top: 20px; }
+        .alles-text { font-size: 10px; letter-spacing: 6px; opacity: 0.8; margin-top: 15px; }
     </style>
 </head>
 <body>
@@ -117,7 +114,7 @@
         
         <div class="links">
             <a href="https://t.me/allesfurdie" class="btn" target="_blank">TELEGRAM</a>
-            <a href="https://instagram.com/ankeb7t01" class="btn" target="_blank">INSTAGRAM</a>
+            <a href="https://instagram.com/ankeb7t27" class="btn" target="_blank">INSTAGRAM</a>
             <a href="https://wa.me/998998780248" class="btn" target="_blank">WHATSAPP</a>
         </div>
 
@@ -145,7 +142,7 @@
             document.getElementById('time').innerText = h + ":" + min + ":" + sec;
         }
 
-        // Sıfır gecikme için hemen çağırıyoruz
+        // Gecikmeyi öldüren satır:
         updateClock();
         setInterval(updateClock, 1000);
     </script>
