--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             overflow: hidden;
         }
 
-        /* GECİKMESİZ TARİH (SAĞ ÜST) */
+        /* GECİKMESİZ TARİH */
         #datetime {
             position: fixed;
             top: 15px;
@@ -27,10 +27,9 @@
             font-size: 16px;
             letter-spacing: 2px;
             z-index: 1000;
-            font-weight: bold;
         }
 
-        /* SHINE (PARLAMA) EFEKTİ */
+        /* SHINE EFEKTİ */
         .shine-text {
             background: linear-gradient(to right, #4d0000 20%, #ff0000 40%, #ffffff 50%, #ff0000 60%, #4d0000 80%);
             background-size: 200% auto;
@@ -45,57 +44,83 @@
             to { background-position: 200% center; }
         }
 
-        /* ANA BAŞLIKLAR (SABİT) */
-        .header-title { font-size: 70px; letter-spacing: 12px; margin-bottom: 5px; }
-        .footer-title { font-size: 80px; letter-spacing: 20px; margin-top: 15px; opacity: 0.9; }
+        /* HEP GÖRÜNECEK BAŞLIKLAR */
+        .fixed-header {
+            position: fixed;
+            top: 50px;
+            font-size: 70px;
+            letter-spacing: 12px;
+            z-index: 500;
+        }
+
+        .fixed-footer {
+            position: fixed;
+            bottom: 50px;
+            font-size: 80px;
+            letter-spacing: 20px;
+            z-index: 500;
+            opacity: 0.9;
+        }
 
         /* OPEN BUTONU */
         #open-btn {
             background: transparent;
             color: #ff0000;
             border: 1px solid #ff0000;
-            padding: 12px 40px;
+            padding: 12px 45px;
             cursor: pointer;
             font-size: 18px;
             font-family: 'Courier New', sans-serif;
             letter-spacing: 6px;
-            margin: 20px 0;
             transition: 0.4s;
+            z-index: 600;
         }
         #open-btn:hover { background: #ff0000; color: #000; box-shadow: 0 0 30px #ff0000; }
 
-        /* ORTA KUTUCUK (KÜÇÜLTÜLMÜŞ) */
+        /* HACKER KONSOLU */
+        #hacker-console {
+            display: none;
+            text-align: left;
+            width: 350px;
+            height: 120px;
+            padding: 15px;
+            font-size: 14px;
+            background: rgba(10, 0, 0, 0.9);
+            border: 1px solid #ff0000;
+            overflow: hidden;
+            z-index: 600;
+        }
+
+        #hacker-console p { margin: 4px 0; white-space: nowrap; }
+
+        /* SOSYAL MEDYA KUTUSU */
         #main-content {
-            display: none; 
+            display: none;
             flex-direction: column;
             align-items: center;
             border: 1px solid #ff0000;
-            padding: 25px; /* İç boşluğu daralttım */
-            width: 300px;  /* Genişliği küçülttüm */
+            padding: 20px;
+            width: 280px;
             background: rgba(0, 0, 0, 0.9);
             box-shadow: 0 0 20px rgba(255, 0, 0, 0.2);
-            animation: fadeIn 0.5s ease-in;
+            animation: fadeIn 0.5s ease;
+            z-index: 600;
         }
 
         @keyframes fadeIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
 
-        .inner-title { font-size: 24px; letter-spacing: 5px; margin-bottom: 20px; }
-
-        /* LİNKLER */
-        .links { display: flex; flex-direction: column; gap: 12px; width: 100%; margin: 15px 0; }
+        .links { display: flex; flex-direction: column; gap: 10px; width: 100%; margin: 15px 0; }
         .btn {
             border: 1px solid #440000;
             color: #ff0000;
-            padding: 10px;
+            padding: 8px;
             text-decoration: none;
             text-align: center;
-            font-size: 14px;
+            font-size: 13px;
             letter-spacing: 2px;
             transition: 0.3s;
         }
-        .btn:hover { border-color: #ff0000; background: rgba(255,0,0,0.15); }
-        
-        .alles-text { font-size: 10px; letter-spacing: 6px; opacity: 0.8; margin-top: 15px; }
+        .btn:hover { border-color: #ff0000; background: rgba(255,0,0,0.1); }
     </style>
 </head>
 <body>
@@ -105,28 +130,52 @@
         <div id="time"></div>
     </div>
 
-    <div class="header-title shine-text">ANKEB7T</div>
+    <div class="fixed-header shine-text">ANKEB7T</div>
+    <div class="fixed-footer shine-text">ZİRVE</div>
 
-    <button id="open-btn" onclick="openSite()">[ OPEN ]</button>
+    <button id="open-btn" onclick="startBoot()">[ OPEN ]</button>
+
+    <div id="hacker-console" class="shine-text"></div>
 
     <div id="main-content">
-        <div class="inner-title shine-text">ANKEB7T</div>
-        
+        <div style="font-size: 20px; letter-spacing: 4px;" class="shine-text">ANKEB7T</div>
         <div class="links">
             <a href="https://t.me/allesfurdie" class="btn" target="_blank">TELEGRAM</a>
             <a href="https://instagram.com/ankeb7t27" class="btn" target="_blank">INSTAGRAM</a>
             <a href="https://wa.me/998998780248" class="btn" target="_blank">WHATSAPP</a>
         </div>
-
-        <div class="alles-text shine-text">ALLES FUR DIE</div>
+        <div style="font-size: 10px; letter-spacing: 5px; opacity: 0.7;" class="shine-text">ALLES FUR DIE</div>
     </div>
 
-    <div class="footer-title shine-text">ZİRVE</div>
-
     <script>
-        function openSite() {
+        const logs = [
+            "> INITIALIZING BOOT...",
+            "> BYPASSING SECURITY...",
+            "> ACCESSING DATABASE...",
+            "> CONNECTION STABLE...",
+            "> SYSTEM READY..."
+        ];
+
+        function startBoot() {
             document.getElementById('open-btn').style.display = 'none';
-            document.getElementById('main-content').style.display = 'flex';
+            const consoleEl = document.getElementById('hacker-console');
+            consoleEl.style.display = 'block';
+
+            let line = 0;
+            const interval = setInterval(() => {
+                if (line < logs.length) {
+                    const p = document.createElement('p');
+                    p.textContent = logs[line];
+                    consoleEl.appendChild(p);
+                    line++;
+                } else {
+                    clearInterval(interval);
+                    setTimeout(() => {
+                        consoleEl.style.display = 'none';
+                        document.getElementById('main-content').style.display = 'flex';
+                    }, 600);
+                }
+            }, 400); // Yazı hızı
         }
 
         function updateClock() {
@@ -137,15 +186,13 @@
             const h = String(now.getHours()).padStart(2, '0');
             const min = String(now.getMinutes()).padStart(2, '0');
             const sec = String(now.getSeconds()).padStart(2, '0');
-
             document.getElementById('date').innerText = d + "." + m + "." + y;
             document.getElementById('time').innerText = h + ":" + min + ":" + sec;
         }
 
-        // Gecikmeyi öldüren satır:
+        // Anında çalıştır
         updateClock();
         setInterval(updateClock, 1000);
     </script>
-
 </body>
 </html>
